lab7 sw found,lab 8 finished